refactor swagger docs
